--- a/dvapp/src/index.css
+++ b/dvapp/src/index.css
@@ -3,3 +3,10 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+welcome {
+  padding: 40px;
+  max-width: 600px;
+  margin: 40px auto;
+  box-shadow: 0 4px 10px 4px;
+}
