--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,6 @@
 .App-header {
   background-color: #222;
   height: 150px;
-  padding: 20px;
   color: white;
 }
 
@@ -22,7 +21,15 @@
   font-size: large;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.list-group {
+  padding: 0;
+}
+
+.list-group-item {
+  padding: 0;
+}
+
+.form-group {
+  margin: auto;
+  width: 200px;
 }
