--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,12 @@
   padding: 0;
 }
 
+.form-control {
+  text-align: center;
+  font-size: 20px;
+}
+
 .form-group {
   margin: auto;
-  width: 200px;
+  width: 120px;
 }
