--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,32 @@
-/* body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-} */
 
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background-color: #c3c3c3;
+  background-color: #464646;
+  /* Location of the image */
+  background-image: url(./img/dvribbon.JPG);
+  
+  /* Background image is centered vertically and horizontally at all times */
+  background-position: center center;
+  
+  /* Background image doesn't tile */
+  background-repeat: no-repeat;
+  
+  /* Background image is fixed in the viewport so that it doesn't move when 
+     the content's height is greater than the image's height */
+  background-attachment: fixed;
+  
+  /* This is what makes the background image rescale based
+     on the container's size */
+  background-size: cover;
+
 }
 
 welcome {
   padding: 40px;
   max-width: 600px;
   margin: 40px auto;
-  box-shadow: 0 4px 10px 4px;
 }
 
 /* The Modals (background) */
@@ -87,7 +98,7 @@ input[type=text], input[type=password] {
 
 /* Set a style for all buttons */
 button {
-  background-color: #8a5639;
+  background-color: rgb(4, 85, 15);
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
@@ -110,7 +121,11 @@ button {
 
 /* Add padding to container elements */
 .container {
-  padding: 16px;
+  background-color: rgba(63, 13, 78, .7);
+  max-width: 50%;
+  margin: 10px auto;
+  color: rgb(255, 189, 189); 
+  padding: 5px 16px;
 }
 
 /* Clear floats */
